--- a/about.html
+++ b/about.html
@@ -319,6 +319,10 @@
         commitment to making television effortless, accessible, and delightful for all.
       </p>
 
+      <p>
+        Notice: Programme images may not be accurate. Channel logos and programme images are copyright of their
+        respective owners.</p>
+
     </div>
   </div>
 </section>
@@ -326,12 +330,7 @@
 <button id="scroll-top" class="btn btn-secondary btn-sm custom-btn" aria-label="Scroll to top">↑ Top</button>
 
 <footer>
-  <small>Programme images may not be accurate. Channel logos and programme images are copyright of their
-    respective
-    owners.</a> |<span class="footer-break"> &copy; <span id="footer-year"></span> TVBridge.com — All Rights
-      Reserved — 📧
-      <a href="mailto:admin@TVBridge.com">admin@TVBridge.com</a>
-  </small>
+  <small>&copy; <span id="footer-year"></span> TVBridge.com — All Rights Reserved</small>
 </footer>
 <script src="js/theme.js" defer></script>
 <script src="js/header-script.js" defer></script>
