--- a/index.html
+++ b/index.html
@@ -202,12 +202,7 @@
 <button id="scroll-top" class="btn btn-secondary btn-sm custom-btn" aria-label="Scroll to top">↑ Top</button>
 
 <footer>
-  <small>Programme images may not be accurate. Channel logos and programme images are copyright of their
-    respective
-    owners.</a> |<span class="footer-break"> &copy; <span id="footer-year"></span> TVBridge.com — All Rights
-      Reserved — 📧
-      <a href="mailto:admin@TVBridge.com">admin@TVBridge.com</a>
-  </small>
+  <small>&copy; <span id="footer-year"></span> TVBridge.com — All Rights Reserved</small>
 </footer>
 <script src="js/theme.js" defer></script>
 <script src="js/header-script.js" defer></script>
