--- a/listings.html
+++ b/listings.html
@@ -78,8 +78,8 @@
     <link rel="icon" type="image/x-icon" href="images/fav-icon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/global-style.css">
-    <link rel="stylesheet" href="css/listings-style.css">
     <link rel="stylesheet" href="css/header-style.css">
+    <link rel="stylesheet" href="css/listings-style.css">
 </head>
 
 <body>
@@ -199,12 +199,7 @@
 
     <!-- Footer -->
     <footer>
-        <small>
-            Programme images may not be accurate. Channel logos and programme images are copyright of their
-            respective owners. |<span class="footer-break"> &copy; <span id="footer-year"></span> TVBridge.com — All
-                Rights Reserved — 📧
-                <a href="mailto:admin@TVBridge.com">admin@TVBridge.com</a>
-        </small>
+        <small>&copy; <span id="footer-year"></span> TVBridge.com — All Rights Reserved</small>
     </footer>
 
     <!-- Scripts -->
