--- a/tv-guide.html
+++ b/tv-guide.html
@@ -78,8 +78,8 @@
   <link rel="icon" type="image/x-icon" href="images/fav-icon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/global-style.css">
-  <link rel="stylesheet" href="css/tvguide-style.css">
   <link rel="stylesheet" href="css/header-style.css">
+  <link rel="stylesheet" href="css/tvguide-style.css">
 </head>
 
 <body>
@@ -159,12 +159,14 @@
 
   <main class="channels-container">
     <section class="channel-column" id="uk-column">
-      <h3 class="heading3" style="text-align:center;">United Kingdom</h3><hr/>
+      <h3 class="heading3" style="text-align:center;">United Kingdom</h3>
+      <hr />
       <div id="channels-uk-list" class="channels-list"></div>
     </section>
 
     <section class="channel-column" id="ireland-column">
-      <h3 class="heading3" style="text-align:center;">Ireland</h3><hr/>
+      <h3 class="heading3" style="text-align:center;">Ireland</h3>
+      <hr />
       <div id="channels-ireland-list" class="channels-list"></div>
     </section>
   </main>
@@ -174,12 +176,7 @@
   </button>
 
   <footer>
-    <small>Programme images may not be accurate. Channel logos and programme images are copyright of their
-      respective
-      owners.</a> |<span class="footer-break"> &copy; <span id="footer-year"></span> TVBridge.com — All Rights
-        Reserved — 📧
-        <a href="mailto:admin@TVBridge.com">admin@TVBridge.com</a>
-    </small>
+  <small>&copy; <span id="footer-year"></span> TVBridge.com — All Rights Reserved</small>
   </footer>
   <script src="js/tvguide-script.js" defer></script>
   <script src="js/theme.js" defer></script>
