--- a/about.html
+++ b/about.html
@@ -60,6 +60,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="TVBRidge is your ultimate TV guide for UK and Ireland, featuring channel listings, show schedules, logos, and up-to-date program information.">
   <title>Sky TV Guide - Channels</title>
   <link rel="icon" type="image/x-icon" href="images/fav-icon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -336,6 +337,7 @@
 <script src="js/theme.js" defer></script>
 <script src="js/header-script.js" defer></script>
 <script src="js/about-script.js" defer></script>
+<script src="js/cache.js" defer></script>
 </body>
 
 </html>
