--- a/contact.html
+++ b/contact.html
@@ -80,6 +80,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="TVBRidge is your ultimate TV guide for UK and Ireland, featuring channel listings, show schedules, logos, and up-to-date program information.">
   <title>Sky TV Guide - Channels</title>
   <link rel="icon" type="image/x-icon" href="images/fav-icon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -166,7 +167,7 @@
 
   <!-- Title -->
   <div class="contact-intro">
-    <img id="logo-image" src="images/logo.png">
+    <img id="logo-image" src="images/logo.png" alt="TVBridge logo">
     <h1>Contact TVBridge</h1>
 
     <!-- Intro / Speal above map/details -->
@@ -248,6 +249,7 @@
 <script src="js/theme.js" defer></script>
 <script src="js/header-script.js" defer></script>
 <script src="js/contact-script.js" defer></script>
+<script src="js/cache.js" defer></script>
 </body>
 
 </html>
