--- a/index.html
+++ b/index.html
@@ -67,54 +67,91 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="description"
+    content="TVBRidge is your ultimate TV guide for UK and Ireland, featuring channel listings, show schedules, logos, and up-to-date program information.">
   <title>Sky TV Guide - Channels</title>
-  <link rel="icon" type="image/x-icon" href="images/fav-icon.ico">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/global-style.css">
-  <link rel="stylesheet" href="css/header-style.css">
-  <link rel="stylesheet" href="css/index-style.css">
+  <link rel="icon"
+    type="image/x-icon"
+    href="images/fav-icon.ico">
+  <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet"
+    href="css/global-style.css">
+  <link rel="stylesheet"
+    href="css/header-style.css">
+  <link rel="stylesheet"
+    href="css/index-style.css">
 </head>
 
 <header class="site-header">
   <div class="header-top">
 
     <!-- Logo -->
-    <a href="index.html" class="logo-link">
-      <img src="images/logo.png" alt="TVBridge Logo" class="header-logo">
+    <a href="index.html"
+      class="logo-link">
+      <img src="images/logo.png"
+        alt="TVBridge Logo"
+        class="header-logo">
     </a>
 
     <!-- Nav + Search wrapper -->
     <div class="nav-search-wrapper">
       <nav class="main-nav">
-        <a class="nav-item active" href="index.html">
+        <a class="nav-item active"
+          href="index.html">
           <span class="nav-icon">
             <!-- Home Icon -->
-            <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-              stroke-linecap="round" stroke-linejoin="round">
+            <svg width="22"
+              height="22"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round">
               <path d="M3 10L12 4L21 10V20H3V10Z"></path>
             </svg>
           </span>
           <span class="nav-label">Home</span>
         </a>
 
-        <a class="nav-item" href="about.html">
+        <a class="nav-item"
+          href="about.html">
           <span class="nav-icon">
             <!-- About Icon -->
-            <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-              stroke-linecap="round" stroke-linejoin="round">
-              <circle cx="12" cy="12" r="9"></circle>
+            <svg width="22"
+              height="22"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round">
+              <circle cx="12"
+                cy="12"
+                r="9"></circle>
               <path d="M12 8V12"></path>
-              <circle cx="12" cy="16" r="1" fill="currentColor"></circle>
+              <circle cx="12"
+                cy="16"
+                r="1"
+                fill="currentColor"></circle>
             </svg>
           </span>
           <span class="nav-label">About</span>
         </a>
 
-        <a class="nav-item" href="contact.html">
+        <a class="nav-item"
+          href="contact.html">
           <span class="nav-icon">
             <!-- Contact Icon -->
-            <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-              stroke-linecap="round" stroke-linejoin="round">
+            <svg width="22"
+              height="22"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round">
               <path d="M4 4H20V16H5L4 17V4Z"></path>
               <path d="M4 4L12 11L20 4"></path>
             </svg>
@@ -122,13 +159,27 @@
           <span class="nav-label">Contact</span>
         </a>
 
-        <a class="nav-item" href="tv-guide.html">
+        <a class="nav-item"
+          href="tv-guide.html">
           <span class="nav-icon">
             <!-- TV Guide Icon -->
-            <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-              stroke-linecap="round" stroke-linejoin="round">
-              <rect x="3" y="5" width="18" height="13" rx="2"></rect>
-              <line x1="3" y1="10" x2="21" y2="10"></line>
+            <svg width="22"
+              height="22"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round">
+              <rect x="3"
+                y="5"
+                width="18"
+                height="13"
+                rx="2"></rect>
+              <line x1="3"
+                y1="10"
+                x2="21"
+                y2="10"></line>
             </svg>
           </span>
           <span class="nav-label">TV Guide</span>
@@ -145,64 +196,79 @@
     </div>
 </header>
 
-<button id="theme-toggle" aria-label="Toggle dark mode">
-  🌙<span class="theme-label">DARK<br>MODE</span>
-</button>
+<body>
+  <button id="theme-toggle"
+    aria-label="Toggle dark mode">
+    🌙<span class="theme-label">DARK<br>MODE</span>
+  </button>
 
-<section class="main-slider-container">
-  <!-- Top row -->
-  <div class="top-row">
-    <!-- Welcome blurb -->
-    <div class="welcome-blurb">
-      <img id="logo-image" src="images/logo.png">
-      <h2>Welcome to TVBridge!</h2>
-      <p>
-        Discover what's on tonight, plan your viewing, and never miss your favourite shows.
-        With TVBridge, you can browse upcoming episodes, track your must-watch series,
-        and explore movies and specials all in one place. Stay up to date with the latest
-        releases, find recommendations tailored to your tastes, and make every evening
-        an enjoyable viewing experience. Your entertainment, your way—effortless and
-        organised.
-      </p>
-    </div>
+  <section class="main-slider-container">
+    <!-- Top row -->
+    <div class="top-row">
+      <!-- Welcome blurb -->
+      <div class="welcome-blurb">
+        <img id="logo-image"
+          src="images/logo.png">
+        <h2>Welcome to TVBridge!</h2>
+        <p>
+          Discover what's on tonight, plan your viewing, and never miss your favourite shows.
+          With TVBridge, you can browse upcoming episodes, track your must-watch series,
+          and explore movies and specials all in one place. Stay up to date with the latest
+          releases, find recommendations tailored to your tastes, and make every evening
+          an enjoyable viewing experience. Your entertainment, your way—effortless and
+          organised.
+        </p>
+      </div>
 
 
-    <!-- Right featured show -->
-    <div class="right-stack">
-      <div class="side-section" id="side-featured">
-        <p id="side-text-featured">Catch all your favourites!</p>
-        <img id="side-image-featured" src="" alt="Featured show">
+      <!-- Right featured show -->
+      <div class="right-stack">
+        <div class="side-section"
+          id="side-featured">
+          <p id="side-text-featured">Catch all your favourites!</p>
+          <img id="side-image-featured"
+            src=""
+            alt="Featured show">
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Bottom row: main slider -->
-  <div class="bottom-row">
-    <div class="left-slider">
-      <div class="slides">
-        <div class="slide active">
-          <div class="slide-card">
-            <img src="images/extended-family.jpg" alt="Extended family watching TV">
-            <div class="slide-content">
-              <h1>TVBridge — All Your Shows, One Place</h1>
-              <p>Discover what's on tonight and never miss a moment with TVBridge.</p>
-              <a href="tv-guide.html" class="custom-btn">Explore TV Guide</a>
+    <!-- Bottom row: main slider -->
+    <div class="bottom-row">
+      <div class="left-slider">
+        <div class="slides">
+          <div class="slide active">
+            <div class="slide-card">
+              <img src="images/extended-family.jpg"
+                alt="Extended family watching TV">
+              <div class="slide-content">
+                <h1>TVBridge — All Your Shows, One Place</h1>
+                <p>Discover what's on tonight and never miss a moment with TVBridge.</p>
+                <a href="tv-guide.html"
+                  class="custom-btn">Explore TV Guide</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<button id="scroll-top" class="btn btn-secondary btn-sm custom-btn" aria-label="Scroll to top">↑ Top</button>
+  <button id="scroll-top"
+    class="btn btn-secondary btn-sm custom-btn"
+    aria-label="Scroll to top">↑ Top</button>
 
-<footer>
-  <small>&copy; <span id="footer-year"></span> TVBridge.com — All Rights Reserved</small>
-</footer>
-<script src="js/theme.js" defer></script>
-<script src="js/header-script.js" defer></script>
-<script src="js/index-script.js" defer></script>
+  <footer>
+    <small>&copy; <span id="footer-year"></span> TVBridge.com — All Rights Reserved</small>
+  </footer>
+  <script src="js/theme.js"
+    defer></script>
+  <script src="js/header-script.js"
+    defer></script>
+  <script src="js/index-script.js"
+    defer></script>
+  <script src="js/cache.js"
+    defer></script>
 </body>
 
 </html>
