--- a/listings.html
+++ b/listings.html
@@ -74,6 +74,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="TVBRidge is your ultimate TV guide for UK and Ireland, featuring channel listings, show schedules, logos, and up-to-date program information.">
     <title>Sky TV Guide - Listings</title>
     <link rel="icon" type="image/x-icon" href="images/fav-icon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -206,6 +207,7 @@
     <script src="js/listings-script.js" defer></script>
     <script src="js/theme.js" defer></script>
     <script src="js/header-script.js" defer></script>
+    <script src="js/cache.js" defer></script>
 
     <!-- Debug -->
     <!-- <div id="debug-box" style="background:#fee;color:#900;padding:10px;white-space:pre-wrap;"></div>
