--- a/tv-guide.html
+++ b/tv-guide.html
@@ -175,6 +175,7 @@
   <script src="js/tvguide-script.js" defer></script>
   <script src="js/theme.js" defer></script>
   <script src="js/header-script.js" defer></script>
+  <script src="js/cache.js" defer></script>
 </body>
 
 </html>
