--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       <!-- Welcome blurb -->
       <div class="welcome-blurb">
         <img id="logo-image"
-          src="images/logo.png">
+          src="images/logo.png" alt="TVBridge logo">
         <h2>Welcome to TVBridge!</h2>
         <p>
           Discover what's on tonight, plan your viewing, and never miss your favourite shows.
