--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
       <!-- Welcome blurb -->
       <div class="welcome-blurb">
         <img id="logo-image"
-          src="images/logo.png" alt="TVBridge logo">
+          src="images/logo.png"
+          alt="TVBridge logo">
         <h2>Welcome to TVBridge!</h2>
         <p>
           Discover what's on tonight, plan your viewing, and never miss your favourite shows.
@@ -262,8 +263,6 @@
     <small>&copy; <span id="footer-year"></span> TVBridge.com — All Rights Reserved</small>
   </footer>
   <script src="js/theme.js"
-    defer></script>
-  <script src="js/header-script.js"
     defer></script>
   <script src="js/index-script.js"
     defer></script>
